# msc-thesis

./: .gitignore  README.md  README.txt  REPRODUCIBILITY.md  methodology_architecture.excalidraw  pyproject.toml  requirements.txt  thesis-architecture-v3.excalidraw  thesis-v5.excalidraw
ICTWSSv1/: README ICTWSSv1.txt  outputs.py
code/: 00_run_pipeline.py  01_data_check.py  02_build_klems_panel.py  03_ictwss_moderator_triage.py  04_klems_baseline.py  05_klems_institution_moderation.py  06_klems_adjcov_moderation.py  07_klems_bucket_moderation.py  08_klems_bucket_adjcov_continuous.py  09_build_wiod_panel.py  1-datacheck.py  1-share-shift-weights.py  10_wiod_baseline.py  11_wiod_institution_moderation.py  12_wiod_bucket_models.py  13_wiod_exposure_models.py  2-build_panel.py  2-crosswalk_ind1990_to_nace2.py  3-equation1-baseline.py  4-equation2-institutional-moderation-coordination.py  5-equation3-institutional-moderation-coverage.py  6-equation4-bucket-heterogeneity-coordination.py  6-equation4-industry-heterogeneity-coordination.py  7-equation5-bucket-heterogeneity-coverage.py  7-equation5-industry-heterogeneity-coverage.py  8-ictwss-triage.py  _equation_utils.py  _klems_utils.py  _paths.py  _shared_utils.py  _wiod_model_utils.py  _wiod_panel_utils.py  convert_xlsb_to_csv.py  runall.py
context/: draft_edit_list_20260515.md  meeting_questions_rebecka_20260515.md
results/: README.md  RESULTS_BRIEF.md  interpretation_memo.md
robustness/: crosswalk_sensitivity.py
streamlit/: streamlit.py
swedenv1/: README sweden v1.txt  main.py
uncomtradev1/: mainv1.py  (+1 more)
(+372 files in other folders)
