[project]
name = "msc-thesis"
version = "0.1.0"
description = "MSc Thesis: Industrial Robots, Labour Demand, and Collective Bargaining Institutions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.0.0",
    "statsmodels>=0.14.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "linearmodels>=5.0",
    "streamlit>=1.28.0",
    "streamlit-flow-component>=1.0.0",
    "plotly>=5.0.0",
    "graphviz>=0.20.0",
    "pyxlsb>=1.0.10",
]

[tool.uv]
package = false
